Add draft report

--- a/Nodes/Model/Model.yaml
+++ b/Nodes/Model/Model.yaml
@@ -4,3 +4,4 @@ Children:
 - File: Layers_Object/Layers_Object.yaml
 - File: AssetManager/AssetManager.yaml
 - File: Prueba/Prueba.yaml
+- File: Reporte/Reporte.yaml
