--- a/Nodes/UI/Screens/Alarmas/Alarmas.yaml
+++ b/Nodes/UI/Screens/Alarmas/Alarmas.yaml
@@ -882,7 +882,7 @@ Children:
       - Name: Model
         Type: NodePointer
         DataType: NodeId
-        Value: "/Objects/Dyrima/Loggers/DataLogger1"
+        Value: {"IdType":2,"Id":"3f2556de6e6c133b7fc8979e3fd2e964","Namespace":7}
         Children:
         - Name: ItemKind
           Type: PropertyType
@@ -5315,7 +5315,7 @@ Children:
       - Name: Model
         Type: NodePointer
         DataType: NodeId
-        Value: "/Objects/Dyrima/Loggers/DataLogger1"
+        Value: {"IdType":2,"Id":"3f2556de6e6c133b7fc8979e3fd2e964","Namespace":7}
         Children:
         - Name: ItemKind
           Type: PropertyType
